# core_scheduler

./: .gitignore  .gitmodules  AUTHORS.txt  CMakeLists.txt  LICENSE  README.md  env.yaml  env.yml
.github/workflows/: copyright.yml  format.yml
cmake/: FindCUDNN.cmake  FindCuTe.cmake  FindNCCL.cmake  toolchain.cmake
dataset/: __init__.py  load.py  prepare_text_gen.py
example/: CMakeLists.txt  distributed_fc_regression.cpp  fc_regression.cpp  gpt2_ddp.cpp  gpt2_single_device.cpp  prepare_dataset.py
example/dataset/: README.md  prepare_dataset.py  prepare_text_gen.py
example/gpt2/: README.md  baseline.cpp  gpt2_amp_ddp.cpp  gpt2_amp_single_device.cpp  gpt2_ddp.cpp  gpt2_single_device.cpp
include/: arg.h  autocast.h  communication.h  context.h  device.h  dtensor.h  dtensor_mpi.h  dtensor_nccl.h  dtype.h  export.h  fc.h  internal_utils.h  logger.h  matmul.h  nvtx_helper.h  random.h  task.h  tensor.h  tensor_friend.h  tensor_impl.h  thread_pool.h  util.h
include/allocate/: malloc_from_mem_internal.h  malloc_from_mem_pool.h
include/communication/: all_gather.h  all_reduce.h  all_to_all.h  communication.h  communication_impl.h  reduce_scatter.h
include/compute/: add.h  amp_embedding.h  amp_gelu_linear.h  amp_layer_norm.h  amp_linear.h  cross_entropy.h  embedding.h  fc.h  flash_attation.h  fused_classifier.h  gelu.h  gelu_linear.h  init.h  layer_norm.h  linear.h  linear_gelu.h  matmul.h  mse.h  nll.h  random.h  relu.h  residual.h  scaled_dot_product_attention.h  softmax.h  utils.h
include/data/: dataloader.h  dataloader_impl.h  dataset.h
include/dataset/: dataloader.h  dataset.h
include/internal/: tensor_impl.h
include/memory/: allocate.h  cuda_memcpy.h  malloc_from_mem_internal.h  malloc_from_mem_pool.h  to_torch.h
include/module/: adamw.h  amp_adamw.h  amp_embedding.h  amp_gelu_linear.h  amp_layer_norm.h  amp_linear.h  amp_state.h  embedding.h  gelu_linear.h  layer_norm.h  linear.h  linear_gelu.h  module.h  optimizer_module.h  pimpl.h  state.h
include/optimizer/: adamw.h  (+2 more)
models/: base.py  mlp.py  utils.py
script/: add-copyright.py  format-code.sh
src/: CMakeLists.txt  autocast.cpp  communication.cpp  fc.cpp  logger.cpp  matmul.cpp  random.cpp  tensor.cpp  thread_pool.cpp
src/allocate/: CMakeLists.txt  malloc_from_mem_pool.cpp
src/communication/: CMakeLists.txt  all_gather.cpp  all_reduce.cpp  all_to_all.cpp  communication.cpp  reduce_scatter.cpp
src/communication/mpi/: CMakeLists.txt  all_gather.cpp  all_reduce.cpp  all_reduce_mpi.cpp  all_reduce_nccl.cpp  all_to_all.cpp
src/communication/nccl/: CMakeLists.txt  all_gather.cpp  all_reduce.cpp  all_reduce_nccl.cpp  all_to_all.cpp  reduce_scatter.cpp
src/compute/: CMakeLists.txt  add.cpp  add.cu  amp_embedding.cpp  amp_gelu_linear_cudnn.cpp  amp_layer_norm.cpp  amp_linear.cpp  cross_entropy.cpp  embedding.cpp  embedding.cu  fc.cpp  fused_classifier.cpp  fused_classifier.cu  gelu.cpp  gelu.cu  gelu_linear_cudnn.cpp  init.cpp  init.cu  layer_norm.cpp  linear.cpp  linear_gelu_cudnn.cpp  matmul.cpp  mse.cpp  mse.cu  nll.cpp  nll.cu  random.cpp  random.cu  relu.cpp  relu.cu  residual.cpp  residual.cu  scaled_dot_product_attention.cpp  sdpa_cudnn.cpp  sdpa_flash_attn.cpp  softmax.cpp  softmax.cu  utils.cpp
src/data/: CMakeLists.txt  dataloader.cpp  dataset.cpp
src/dataset/: CMakeLists.txt  dataloader.cpp  dataset.cpp
src/flash_attention/: CMakeLists.txt  context.cpp
src/flash_attention/fake_torch/ATen/: ATen.h
src/flash_attention/fake_torch/ATen/cuda/: CUDAContext.h  CUDAGeneratorImpl.h
src/flash_attention/fake_torch/ATen/cuda/detail/: PhiloxCudaStateRaw.cuh  UnpackRaw.cuh
src/flash_attention/fake_torch/c10/cuda/: CUDAGuard.h
src/flash_attention/fake_torch/c10/macros/: Macros.h
src/flash_attention/fake_torch/torch/: extension.h  python.h
src/flash_attention/flash_attn/: flash_api.cpp
src/flash_attention/ft_attention/: ft_attention.cpp
src/flash_attention/fused_softmax/: scaled_masked_softmax_cuda.cu  scaled_upper_triang_masked_softmax_cuda.cu
src/flash_attention/layer_norm/: ln_api.cpp  registry.cpp
src/memory/: CMakeLists.txt  allocate.cpp  cuda_memcpy.cpp  malloc_from_mem_pool.cpp  to_torch.cpp
src/module/: CMakeLists.txt  adamw.cpp  amp_adamw.cpp  amp_embedding.cpp  amp_gelu_linear.cpp  amp_layer_norm.cpp  amp_linear.cpp  amp_state.cpp  embedding.cpp  gelu_linear.cpp  layer_norm.cpp  linear.cpp  linear_gelu.cpp  module.cpp  optimizer_module.cpp  state.cpp
src/optimizer/: CMakeLists.txt  adamw.cpp  adamw.cu  amp_adamw.cpp  amp_adamw.cu  sgd.cpp  sgd.cu
src/threading/: CMakeLists.txt  cudnn_handle.cpp  dynamic_scheduler.cpp  event.cpp  scheduler.cpp  task.cpp  thread_pool_compute.cpp  thread_pool_cudart.cpp  thread_stream_cudart.cpp  thread_stream_mpi.cpp  thread_stream_nccl.cpp
test/: CMakeLists.txt  helper.h  main.cpp  main_communication.cpp  test_adamw.cpp  test_add.cpp  test_all_gather.cpp  test_all_reduce.cpp  test_all_to_all.cpp  test_amp_adamw.cpp  test_autocast.cpp  test_cross_entropy.cpp  test_cudnn_attention.cpp  test_embedding.cpp  test_fc.cpp  test_flash_attention.cpp  test_fused_classifier.cpp  test_gelu.cpp  test_gelu_linear.cpp  test_init.cpp  test_layer_norm.cpp  test_layernorm.cpp  test_linear.cpp  test_linear_gelu.cpp  test_load_save.cpp  test_reduce_scatter.cpp  test_relu.cpp  test_residual.cpp  test_softmax.cpp  test_utils.cpp
test/data_parallel/: train.py
test/memory/: gpt2_linear_custom.py  gpt2_linear_pytorch.py  gpt2_mlp_attn_custom.py  gpt2_mlp_attn_pytorch.py  gpt2_mlp_custom.py  gpt2_mlp_pytorch.py  gpt2_nonemb_custom.py  gpt2_nonemb_pytorch.py
test/models/emb_linear/: baseline.py  custom.py
test/models/linear/: baseline.py  custom.py
test/models/mlp/: baseline.py  custom.py  utils.py
test/operators/compute/basic/: cross_entropy.py  embedding.py  gelu.py  layernorm.py  linear.py  relu.py  silu.py
test/sequence_parallel/: mlp.py
test/single_device/: baseline.py  eval_acc.py  train.py
test/tensor_parallel/: train.py
test/zero/zero1/: train.py
test/zero/zero3/: train.py
utils/: __init__.py  memory.py  seed.py  timer.py
(+70 files in other folders)
